@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#2114] Feature: Add a new flavor "favorites list"
 - [#2199] Feature: Add a method limitToVip() to tx_seminars_seminarbagbuilder
 - [#2205] Fix: tx_seminars_bagbuilder::setTestMode() does not work with additional tables
 - [#2200] Feature: Add a method limitToDateAndSingleRecords() to tx_seminars_seminarbagbuilder
